@@ -2798,8 +2798,8 @@ password=P@ssW0rd!
             <tbody>
             <tr>
                <td>branch</td>
-               <td>Yes</td>
-               <td>The ClearCase branch</td>
+               <td>No</td>
+               <td>Restricts the report to events relating to branches of the specified type.</td>
             </tr>
             <tr>
                <td>recursive</td>
